<resources>
    <string name="app_name">18121772_LiJiaQi_Week07</string>
    <string name="app_name_display">安卓计算器</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_p">+</string>
    <string name="btn_s">-</string>
    <string name="btn_m">×</string>
    <string name="btn_d">/</string>
    <string name="btn_c">C</string>
    <string name="btn_e">=</string>
    <string name="btn_bracket">()</string>
    <string name="btn_percentage">%</string>
    <string name="btn_minus">+/-</string>
    <string name="btn_dot">.</string>
    <string name="edit_hint">输入表达式</string>
</resources>