<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_display"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.080" />

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/infoTextView"
        android:hint="@string/edit_hint"
        android:enabled="false"
        android:gravity="bottom"
        android:lines="2"
        android:maxLines="2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:columnCount="4"
            android:rowCount="5"
            android:useDefaultMargins="true">

            <Button
                android:id="@+id/button_c"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:text="@string/btn_c" />

            <Button
                android:id="@+id/button_fb"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:text="@string/btn_bracket" />

            <Button
                android:id="@+id/button_fp"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:text="@string/btn_percentage" />

            <Button
                android:id="@+id/button_d"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:text="@string/btn_d" />

            <Button
                android:id="@+id/button_7"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:text="@string/btn_7" />

            <Button
                android:id="@+id/button_8"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:text="@string/btn_8" />

            <Button
                android:id="@+id/button_9"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:text="@string/btn_9" />

            <Button
                android:id="@+id/button_m"
                android:layout_row="1"
                android:layout_column="3"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:text="@string/btn_m" />

            <Button
                android:id="@+id/button_4"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:text="@string/btn_4" />

            <Button
                android:id="@+id/button_5"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:text="@string/btn_5" />

            <Button
                android:id="@+id/button_6"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:text="@string/btn_6" />

            <Button
                android:id="@+id/button_s"
                android:layout_row="2"
                android:layout_column="3"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:text="@string/btn_s" />

            <Button
                android:id="@+id/button_1"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:text="@string/btn_1" />

            <Button
                android:id="@+id/button_2"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:text="@string/btn_2" />

            <Button
                android:id="@+id/button_3"
                android:layout_row="3"
                android:layout_column="2"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:text="@string/btn_3" />

            <Button
                android:id="@+id/button_p"
                android:layout_row="3"
                android:layout_column="3"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:text="@string/btn_p" />

            <Button
                android:id="@+id/button_minus"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:text="@string/btn_minus" />

            <Button
                android:id="@+id/button_0"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:text="@string/btn_0" />

            <Button
                android:id="@+id/button_dot"
                android:layout_row="4"
                android:layout_column="2"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:text="@string/btn_dot" />

            <Button
                android:id="@+id/button_e"
                android:layout_row="4"
                android:layout_column="3"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:text="@string/btn_e" />
        </GridLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>